[tool.poetry]
name = "typer-tryouts"
version = "0.1.0"
description = "Repo for me to try out the typer package"
authors = ["Pavel Vergeev <vergeev@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
